@@ -4,7 +4,10 @@
 	  to catch exceptions.
 	* smf_lookup_sql.c (smf_lookup_sql_query) added check for empty query string,
 	  to catch exceptions.
-	* smf_smtpd.c (load) changed smtp code 502 response message
+	* smf_smtpd.c (load) changed smtp code 502 response message, added syntax check
+	  for email addresses.
+	* smf_core.c (smf_core_valid_address) added new function to validate
+	  email addresses.
 
 2010-04-23	Axel Steiner <ast@treibsand.com>
 	* smf_message.c (smf_message_extract_addresses) fixed initialization bug
